feat: 增加获取角色权限的接口
